Login and Register

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
     <!-- akar-icons -->
     <script src="https://unpkg.com/akar-icons-fonts"></script>
+
+    <!-- box-icons -->
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
   </head>
   <body>
     <div id="root"></div>
